@@ -42,6 +42,8 @@ VERSION 1.2.2 (??? ?? ??:?? 2005)
 - Fixed incorrect call to cmd_rm_rf() in handle_interval()
 - Fixed trailing slash on call to bail() in handle_interval()
 - Added sync_first feature (touches a lot of code)
+- When link_dest is enabled, rsnapshot will now hunt for the newest available
+  directory to use as a link_dest target (up to the oldest directory)
 
 VERSION 1.2.1 (Apr 09 15:10 2005)
 ------------------------------------------------------------------------------
